--- a/README
+++ b/README
@@ -1,1 +1,2 @@
 This is a c++ class encapsulating come functions of MySQL in Ubuntu 16.04 LTS.
+My csdn blog: https://blog.csdn.net/lixujie666/article/details/89382280
